# django-quill-editor-next

./: README.md  pyproject.toml
django_quill/: config.py  widgets.py
django_quill/templates/django_quill/: media.html
