[tool.poetry]
name = "django-quill-editor"
version = "0.1.0"
description = ""
authors = ["lhy <dev@lhy.kr>"]
packages = [{ include = "django_quill" }]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0.7"
django-extensions = "^3.2.3"
djangorestframework = "^3.15.2"
gunicorn = "^22.0.0"
model-bakery = "^1.18.2"

[tool.poetry.dev-dependencies]
# Test
pytest = "^8.3.2"
pytest-django = "^4.8.0"
pytest-cov = "^5.0.0"
coverage = "^7.6.0"
codecov = "^2.1.13"
tox = "^4.16.0"

# Deploy
twine = "^5.1.1"
setuptools = "^71.1.0"
notebook = "^7.2.1"

# Doc
Sphinx = "^7.4.7"
recommonmark = "^0.7.1"
sphinx-rtd-theme = "^2.0.0"
build = "^1.2.1"
wheel = "^0.43.0"

[build-system]
requires = ["poetry>=0.12", "setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
